--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -87,20 +87,7 @@
                 element: '#search',
                 showSubResults: false,
                 baseUrl: '/MyBlob/',
-                language: 'zh-Hant',
-                translations: {
-                    ui: {
-                        search: "搜尋",
-                        clear_search: "清除",
-                        input_placeholder: "搜尋文章標題...",
-                        search_results: '找到 {count} 筆結果',
-                    },
-                    results: {
-                        zero_results: '找不到關於 "{query}" 的結果',
-                        many_results: '找到 {count} 筆關於 "{query}" 的結果',
-                        one_result: '找到 1 筆關於 "{query}" 的結果',
-                    }
-                }
+                 language: 'zh-tw'
             });
         }
     }
