Update blog name and docs

--- a/layouts/partials/content-body.html
+++ b/layouts/partials/content-body.html
@@ -10,7 +10,7 @@
             {{/* 在此處加上 data-pagefind-ignore，讓搜尋功能忽略標籤 */}}
             <span class="inline-flex flex-wrap gap-2 items-center" data-pagefind-ignore>
                {{ range . }}
-                <a href="/MyBlob/tags/{{ . | urlize }}/" class="tag-pill">{{ . }}</a>
+                <a href="/ChiYu-Blob/tags/{{ . | urlize }}/" class="tag-pill">{{ . }}</a>
                 {{ end }}
             </span>
             {{/* --- ↑↑↑ 主要修改處 ↑↑↑ --- */}}
