--- a/layouts/partials/tag_sidebar.html
+++ b/layouts/partials/tag_sidebar.html
@@ -2,7 +2,7 @@
 <aside class="w-64 flex-shrink-0 hidden lg:block pl-8">
     <div class="sticky top-20">
         <div class="mb-8 text-center">
-            <img src="{{ "/images/avatar.jpg" | relURL }}" 
+            <img src="{{ "/ChiYu-Blob/images/avatar.jpg" | relURL }}" 
                  alt="個人大頭貼" 
                  class="w-32 h-32 rounded-full mx-auto object-cover border-2"
                  style="border-color: var(--border-color);">
