--- a/layouts/partials/tag_sidebar.html
+++ b/layouts/partials/tag_sidebar.html
@@ -1,4 +1,4 @@
-<aside class="w-64 flex-shrink-0 hidden lg:block pl-8">
+<aside class="w-64 flex-shrink-0 hidden lg:block pl-8" data-pagefind-ignore> 
     <div class="sticky top-20">
 
         <div class="mb-8 text-center">
