--- a/layouts/partials/tag_sidebar.html
+++ b/layouts/partials/tag_sidebar.html
@@ -1,7 +1,7 @@
-<aside class="w-64 flex-shrink-0 hidden lg:block pl-8" data-pagefind-ignore> 
-    <div class="sticky top-20">
+<aside class="w-64 flex-shrink-0 hidden lg:block pl-8"> 
+    <div class="sticky top-20"  data-pagefind-ignore>
 
-        <div class="mb-8 text-center">
+        <div class="mb-8 text-center" data-pagefind-ignore>
              <img src="{{ "/ChiYu-Blob/images/avatar.jpg" | relURL }}" 
                  alt="個人大頭貼" 
                  class="w-32 h-32 rounded-full mx-auto object-cover border-2"
