--- a/layouts/partials/tag_sidebar.html
+++ b/layouts/partials/tag_sidebar.html
@@ -2,7 +2,7 @@
     <div class="sticky top-20"  data-pagefind-ignore>
 
         <div class="mb-8 text-center" data-pagefind-ignore>
-             <img src="{{ "/ChiYu-Blob/images/avatar.jpg" | relURL }}" 
+             <img data-pagefind-ignore src="{{ "/ChiYu-Blob/images/avatar.jpg" | relURL }}" 
                  alt="個人大頭貼" 
                  class="w-32 h-32 rounded-full mx-auto object-cover border-2"
                  style="border-color: var(--border-color);">
