--- a/layouts/partials/content-body.html
+++ b/layouts/partials/content-body.html
@@ -45,8 +45,8 @@
             {{ end }}
         {{ end }}
 
-        {{/* 若未手動指定，則退回預設排序的 PrevInSection */}}
-        {{ if not $prev }}
+        {{/* 若未手動指定，且文章也未指定下一篇時，才退回預設排序 */}}
+        {{ if and (not $prev) (not .Params.next_post_slug) }}
             {{ $prev = .PrevInSection }}
         {{ end }}
 
@@ -71,8 +71,8 @@
             {{ end }}
         {{ end }}
 
-        {{/* 若未手動指定，則退回預設排序的 NextInSection */}}
-        {{ if not $next }}
+      {{/* 若未手動指定，且文章也未指定上一篇時，才退回預設排序 */}}
+        {{ if and (not $next) (not .Params.prev_post_slug) }}
             {{ $next = .NextInSection }}
         {{ end }}
 
