--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -160,6 +160,24 @@
               script.async = true;
               giscusContainer.appendChild(script);
           }
+             
+        const scrollToTopBtn = document.getElementById('scroll-to-top-btn');
+          if (scrollToTopBtn) {
+            window.addEventListener('scroll', () => {
+              if (window.pageYOffset > 300) { // 當頁面滾動超過 300px 時顯示按鈕
+                scrollToTopBtn.classList.add('show');
+              } else {
+                scrollToTopBtn.classList.remove('show');
+              }
+            });
+    
+            scrollToTopBtn.addEventListener('click', () => {
+              window.scrollTo({
+                top: 0,
+                behavior: 'smooth' // 平滑滾動效果
+              });
+            });
+          }
         });
     </script>
     </body>
