--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -10,14 +10,14 @@
 
             <section>
                 <div class="space-y-8">
-                    {{/* --- ↓↓↓ 建立分頁並依日期與權重排序 ↓↓↓ --- */}}
-                    {{/* 1. 建立分頁器：先依日期降序，再依權重降序 */}}
-                    {{ $paginator := .Paginate (sort .Pages "Date" "desc" "Weight" "desc") }}
+                    {{/* --- ↓↓↓ 移除 Weight，僅依日期排序並建立分頁 ↓↓↓ --- */}}
+                    {{/* 1. 建立分頁器：僅依日期降冪排序，日期需包含時間 */}}
+                    {{ $paginator := .Paginate (sort .Pages "Date" "desc") }}
                     {{/* 2. 輸出當前分頁的文章 */}}
                     {{ range $paginator.Pages }}
                         {{ .Render "card" }}
                     {{ end }}
-                    {{/* --- ↑↑↑ 建立分頁並依日期與權重排序 ↑↑↑ --- */}}
+                    {{/* --- ↑↑↑ 移除 Weight，僅依日期排序並建立分頁 ↑↑↑ --- */}}
                 </div>
             </section>
 
