--- a/layouts/series/list.html
+++ b/layouts/series/list.html
@@ -11,7 +11,8 @@
 
             <section>
                 <div class="space-y-8">
-                    {{ range .Pages.ByWeight }}
+                    {{/* 只顯示發佈日期早於或等於今日的文章 */}}
+                    {{ range (where .Pages "Date" "le" now).ByWeight }}
                         {{ .Render "card" }}
                     {{ end }}
                 </div>
